# python-ci-cd

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .trivyignore  CI-CD.md  Dockerfile  Makefile  SOLUTION.md  production-cicd.yml  pyproject.toml
.github/deployments/: dev-tags.yml
.github/prompts/: cicd-bootstrap.prompt.md
.github/workflows/: build-publish.yml  build.yml  cd.yml  ci-cd-pipeline.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-qa.yml  deploy-release.yml  deploy-staging.yml  deploy-template.yml  deploy-uat.yml  deploy.yml  gitops-deploy.yml  pr-validation.yml  prod-deploy.yml  production-cicd.yml  promote.yml  release-promote.yml  release-tag.yml  rollback.yml
deploy/argocd/: applicationset.yaml
deploy/helm/gist-api/: Chart.yaml  values-dev.yaml  values-qa.yaml  values-stage.yaml  values-staging.yaml  values-uat.yaml  values.yaml
deploy/helm/gist-api/templates/: _helpers.tpl  deployment.yaml  service.yaml
path/to/: log_fetcher.py
src/: __init__.py  api.py  cache.py  config.py  github_client.py  main.py  models.py
tests/: __init__.py  test_main.py
